--- a/text/长文1.md
+++ b/text/长文1.md
@@ -1,4 +1,82 @@
+接“在更详细地评论这些事实时，我们将对论文的内容给出快速回顾。”
 
+他声明，多位作者使用了不同的方法得出这些数字，但实际上这些作者无法准确地说明他们在计数什么。他认为这些计数导致相同值的事实是一种奇迹，因为使用的方法并不严格。Teichmüller随后说，为了具有意义，这些数字应该代表一个维数，并且为了讨论集合的维数（在本例中，为模量空间），必须将该集合转化为具有邻域概念的某个“空间”。4在这里，Teichmüller是第一个以如此精确的术语表述Riemann面的模量问题的人。
+
+Teichmüller强调，不应该首先要求通过坐标系统中的数字来显式表示模量空间中的点（这种方法似乎是由Riemann的工作所暗示的），而应该更多地研究该空间的内部结构。他随后说，不仅希望模量集合R具有拓扑空间或代数多样体的结构，还希望具有解析流形的结构，即无奇点的复空间。Teichmüller说这是不可能的，因为R“包含某些奇异流形”。用现代语言来说，这对应于模量空间是一个orbifold而非流形的事实。因此，他构造了一个没有奇点的覆盖R覆盖R。这个空间R后来被称为Teichmüller空间。5
+
+Teichmüller随后简要概述了他的结果和方法，并指出他在“不久的将来”无法发布详细信息。6他宣布，他对模量问题的解决方案基于三个新引入的概念：
+
+1) Riemann面的“拓扑决定”：这是我们今天称之为“标记”的概念。这里，一个Riemann面配备了一个固定的同胚类，从一个固定的Riemann面开始。我们注意到Teichmüller在他1939年的论文[21]中已经引入了标记。
+
+2) Riemann面的解析族的概念：这一概念在本文中以及Teichmüller理论后续发展中都起着中心作用。它后来被多位作者重新引入，他们在研究模量空间，我们将特别提到Grothendieck。
+
+3) “转动块坐标”的概念：这是一种修改Riemann面上简单闭曲线的正则邻域中的复结构的操作。环面的复自同构群是S^1，转动块扭曲可以被看作某种意义上的复类似于Fenchel-Nielsen扭曲的祖先。
+
+这篇文章未吸引大量关注的原因之一可能是Teichmüller的论文被分析家而非几何学家审阅，而本文的方法是代数几何学的。另一个原因是这篇文章发表在由Bieberbach创立的短命期刊《Deutsche Mathematik》上，该期刊只有极少数的图书馆（主要在德国以外）订阅。该期刊的前两期包含了关于种族对数学影响的纳粹观点的文章。关于阅读Teichmüller论文的困难，我们可以引用Ahlfors在1954年的论文《等距映射》[2]中的话，其中他引用了Teichmüller1939年论文[21]的结果：“为了完整性，我们没有犹豫地几乎不变地重现了Teichmüller的推理。一个好的原因是Teichmüller的论文不容易获取。另一个原因是，从充满猜想的迷宫中提取Teichmüller的完整且无可辩驳的证明需要相当的努力。”
+
+细致模量空间是一个纤维空间，其中纤维的同构类型决定了它下方的点。4 Teichmüller写道，只要R不是具有邻域概念的空间，它就不具有分析学或集合论意义上的维数。在这个背景下，“集合论”指的是拓扑学。
+可能是André Weil首次提出了“Teichmüller空间”这个名称；参见Weil在其《Collected Papers》（第二卷，第546页）中的评论，Weil写道：“[...] 这促使我撰写关于曲线模量和我称之为‘Teichmüller空间’的观察。”还可以参考[13]中的历史评论。
+
+Teichmüller同年去世，享年30岁。在这一介绍之后，Teichmüller定义了模量空间R和等价类群在该空间上的作用。他将模量问题制定为，先验上是“询问空间R的性质”的问题。然而，他说，实际上更好的是研究覆盖R而不是R本身。模量问题再次以更精确的形式给出。
+
+Teichmüller随后引入了解析n维流形的概念，由具有解析坐标变换的坐标图定义。看起来这是该定义在数学文献中的一个早期出现。我们可以引用Remmert的话（第19页，第225页）：
+
+很难确定第一篇显示复流形的文章。在1944年，它们出现在Teichmüller关于“可变Riemann面”的工作中（Collected Papers，第714页）；在这里，我们第一次遇到德语“komplex analytische Mannigfaltigkeit”的表达。英语“complex manifold”出现在Chern的工作中（第8页，第103页）；他只是顺便提到通过星座来定义。而在1947年，我们在Weil的文章[23]的标题中发现“variété analytique complexe”。复流形瞬间在各处绽放。
+
+无论如何，值得注意的是，文献中首次出现的高维复流形的例子（其他不是复数域C^n，n≥2的域的例子）正是等价类的标记复流形（维数为一）的空间。7
+
+Teichmüller随后引入了Riemann面的解析族的概念。用现代语言来说，这是一个在解析基空间B上的纤维丛M，纤维是Riemann面。从微分学的角度来看，纤维丛局部平凡（但从解析学的角度来看，由于在一个简化的乘积邻域中，两个纤维通常不同构为Riemann面）。
+
+Riemann面的一个特别有趣的解析族是基空间B为Teichmüller空间且每个点上的纤维为代表该点自身的标记Riemann面的情况。在这种情况下，纤维丛被称为普适Teichmüller曲线，或称Teichmüller曲线。
+
+我们注意到，Teichmüller曲线后来在数学文献中被重新引入，通常没有引用Teichmüller的论文。对Teichmüller空间的纤维丛方法被多位作者扩展和精确化，例如参见Ahlfors的[4]、Bers的[6]、[12]和Earle与Eells的[9]。在Ahlfors的1961年论文[4]和Bers的1961年论文[6]中，这个纤维丛被用来定义Teichmüller空间的复杂结构。8
+
+当然，Teichmüller空间当时还不被认为是复域。后来发现了该空间嵌入到 $(\mathbb{C}^N)$的方法。
+
+Ahlfors在他的论文中（第171页）说他的方法“基本上是Bers的”，Bers写道（第356页）：“Teichmüller声称高维Teichmüller空间具有‘自然’的复杂结构；第一次证明是由Ahlfors给出的，Rauch展示了如何在任何不是双曲面的点的邻域引入复分析坐标。其他证明归功于Kodaira-Spencer和Weil。”Bers在讨论解析结构的一节开头写道：“这一节和下一节的结果证实并扩展了Teichmüller在论文《可变Riemann面》中的一些断言。它们还表明，上述定义的复分析结构是自然的，并与Rauch-Ahlfors的结构相符。”我们顺便指出，Riemann面的纤维丛的切丛序列是Kodaira-Spencer关于Riemann面微小变形理论的基础[14]，该理论也提供了Teichmüller空间复杂结构的描述。Grothendieck对Teichmüller空间的研究基于对具有Riemann面作为纤维的基面的解析纤维丛的考虑（Grothendieck将其称为“属数为g的代数曲线”），参见[12]，第7讲及以下。最后，我们注意到纤维丛方法也被用来定义解析向量丛，最自然的一个是在基空间上的每一点处取纤维面的切丛。对模量空间上纤维丛的特征类的研究导致了多项重要发展。在这方面，我们提到Mumford猜想（由Madsen解决）和Witten猜想（由Kontsevich解决）。
+
+9 这个术语是德语“permanente Ortsuniformisierende”的英文翻译，Bers也在[6]中使用。Teichmüller曲线证明是Hodge理论中一个极其重要的对象。
+
+Teichmüller的目标是展示Teichmüller曲线是维数为(3g - 2)的复流形。
+
+在一般情况下，当基空间B是具有Riemann面为纤维的解析流形时，Teichmüller引入了一个他称之为永久坐标的概念，这是一个局部解析坐标系统，为每个纤维上的Riemann面提供一个解析参数。因此，Teichmüller得到了一个局部适用于B上点的Riemann面族的坐标t，与B的局部r维参数结合，产生了M的（r+1）维参数系统，将其视为（r+1）维复流形。他声明这样的永久坐标存在。
+
+纤维上的Riemann面在先验条件下没有标记。Teichmüller表明可以从一个纤维的标记获得周围纤维的标记。他接着说，由于众所周知的原理，从空间B可以构造一个相对未分叉的覆盖B，B上的点的纤维是标记的Riemann面。
+
+Teichmüller接着陈述了一个全局解析的标记（Teichmüller称之为“拓扑确定”）Riemann面族H[c]的存在性和唯一性定理，其中c遍历一个τ维复解析流形C，对于任何属数为g的标记Riemann面H，存在且仅存在一个c，使得Riemann面H与H[c]同胚，且族H[c]满足以下普适性质：如果H[p]是以B为基的任何全局解析的Riemann面族，则存在一个holomorphic映射 $(f : B \to C)$，使得族H[p]是通过f提升的族H[c]。Teichmüller声明这样的族H[c]存在，并且在本质上是唯一的。从上下文来看，用现代术语来说，本质唯一性意味着族是等价类群作用下唯一的。
+
+复解析流形C，作为族H[c]的基空间，是我们今天称之为Teichmüller空间的对象。这个存在性和唯一性结果后来被Grothendieck重新发现，他用与Teichmüller不同的代数几何语言给出了完整的证明。Grothendieck在Cartan的研讨会上（1960-1961年）关于此主题做了一系列讲座，并将这些讲座的文字记录流传和出版。Grothendieck的陈述比Teichmüller的更一般；它用普适性质的术语表达，涉及使用Grothendieck的措辞的一个“硬化函子”P相对于离散群 $(\gamma) $，可以特别取为“Teichmüller硬化函子”，其中 $(\gamma) $是等价类群。Grothendieck的陈述是以下内容（在这个陈述中，T是Teichmüller空间）：
+
+定理3.1：存在一个解析空间T和在T上的P代数曲线V，它们是普适的，意味着对于每个在解析空间S上的P代数曲线X，存在唯一的映 $射(g : S \to T) $，使得X（以及其P结构）与通过g提升的V/T是同构的。
+
+Grothendieck推出以下推论（在这里 $(\gamma)$如前所述是等价类群）：
+
+命题3.3：设X, X'是在S上的两个P曲线，分别由映射(f, f')从S到T定义。假定S是连通的且非空。那么X与X'的S同构（不考虑P结构）的集合，在自然意义上与满足 $(f' = u \circ f) $的 $(u \in \gamma) $的集合一一对应。
+
+这是关于等价类群的刚性陈述。等价类群被自然地识别为P曲线的同构类群。
+将这段关于Teichmüller曲线的存在性和唯一性（直至映射类群作用）的陈述，可以被视为系列成果中的第一个，该系列成果之后陆续获得，均关于映射类群作用的刚性。其中下一个（也可能是最著名的）是罗伊登的结果，该结果指出Teichmüller空间复结构的自同构群是扩展映射类群，参见 [20]。通用族的存在性和唯一性后来由阿尔福斯和伯斯独立构建，参见 [10] 中的历史评述。
+
+Teichmüller认为这个定理解决了模空间问题，并借此机会更精确地阐述了这个问题：亏格为 $g$ 的解析标记曲面的所有类别的空间 R，通过将其等同于通用解析族的基空间 C，而被转化为复解析流形。这同时赋予了Teichmüller空间一个复解析结构和一个拓扑结构。 Teichmüller对此定理的证明使用了来自代数几何的工具，以及除子、主部和位的代数几何语言。他陈述了第二个定理，这个定理是第一个定理的证明所必需的，该结果关于“通过广义主部系统确定一个函数”。在这种背景下，黎曼曲面是通过函数域来研究的。黎曼曲面被视为超越次数为 1 的 C 上的域。域中的位反过来给出了曲面。
+
+然后，Teichmüller引入了转折片的概念以及转折片的转折片坐标的概念。这是一种改变曲面复结构的方法，这种曲面按照黎曼的传统，被给定为与代数函数相关的平面的分支覆盖。解析函数由“广义主部系统”确定。Teichmüller空间的解析结构是通过改变这些函数的系数来定义的。
+
+Teichmüller指出他的空间 R“最多由可数个连通部分组成”，并且他“认为 R 实际上是单连通的”。因此，他不确定他在本文中定义的空间 R 是否与他在 1939 年的论文 [21] 中使用拟共形理论定义的Teichmüller空间相同。值得注意的是，格罗滕迪克解决了这个问题。事实上，在引入了使用泛性质的Teichmüller空间的定义（正如我们上面回顾的那样）之后，格罗滕迪克在 ([12] 7-08) 中写道：
+
+“同样很容易检查，如果需要的话，可以使用伯斯 [7] 的一篇论文，我们在这里公理化引入的空间（如果这个空间存在，我们将证明这个事实）与分析学家的Teichmüller空间同构。由此可见，Teichmüller空间同胚于一个球，因此是可收缩的，特别是连通的且单连通的。 自然而然地，所有层次的雅可比空间都是连通的，如同在第 5 节中作为Teichmüller空间的商空间引入的模空间 M 一样。似乎目前甚至没有模空间连通性的代数几何证明（我们可以用代数几何来解释，即相同亏格 g 的两条曲线是代数曲线族的一部分，该曲线族由连通的代数簇参数化）。
+
+然后，Teichmüller继续研究模空间，即通过忘记标记而得到的空间。描述非常简短。（他说：“最后，我想简要提及当释放拓扑确定性时会发生什么。”）他回顾了映射类群的定义及其在标记曲面的等价类空间上的作用，他表明这种作用是真不连续的，并且他将模空间定义为Teichmüller空间在这种作用下的商空间。他考虑了他称之为 R 的奇异点；它们位于 R 的某个解析子流形上。这些点被映射类群的非平凡有限群稳定化，并且它们是模空间成为复流形的障碍。他表明，其中一些点是实质性的奇点，也就是说，模空间在这些点不是流形。 
+
+([12] p. 7-08) [定理 3.1.— 存在一个解析空间 T，以及一个在 T 之上的 P-代数曲线 V，它们在以下意义上是通用的：对于任何在解析空间 S 之上的 P-代数曲线 X，都存在一个且只有一个从 S 到 T 的态射 g，使得 X 与 V/T 通过 g 的拉回（及其 P-结构）同构]。 格罗滕迪克似乎听说过Teichmüller的论文，但像许多其他人一样，他并没有阅读它们。尽管如此，Teichmüller在模空间问题上的工作对格罗滕迪克产生了巨大的影响，格罗滕迪克在本论文的引言中宣称，标题是：“Teichmüller空间及其变体的公理化描述”：“在这样做的时候，重新审视解析几何基础的必要性将变得显而易见。”。
+
+似乎研究Teichmüller理论的分析学家听说过格罗滕迪克的工作，但并没有理解它。 我们可以引用阿比科夫在此处的评论，他在 1989 年在《美国数学会通报》[1] 上发表的一份关于 Nag 的书的报告中写道：“首先，代数几何学家将我们这些高贵但孤立的、具有反传统学科的实践者，置于他们强大的羽翼之下。 我们学会了提供引理的乐趣，这些引理解决了偏微分方程和积分方程以及各种其他具体的实际结果。 这些引理使如下定理成为可证明的：这个是可表示的。” 
+
+让我们也引用阿尔福斯在 1964 年关于拟共形映射的综述 [5]（第 152 页）中谈到Teichmüller 1944 年的论文时说：“在最后一次努力中，Teichmüller用一种完全不同的方法解决了结构问题，但它太繁琐了，以至于没有人检查过所有细节，这令人怀疑。 [...]公平地说，在这一点上必须提到，代数学家也解决了模空间问题，在某种意义上甚至比分析学家更彻底。 由于语言不同，目前很难比较代数方法和分析方法，但似乎两者都有各自的优势。
+
+([12] p. 7-10) [命题 3.3.— 令 X,X ′ 是在 S 之上的两条 P-曲线，分别由从 S 到 T 的态射 f,f ′ 定义。假设 S 是非空连通的。那么，对于基础曲线（没有 P-结构）的 S-同构 $X \sim \rightarrow X’$ 的集合，与所有满足 $f ′ = u \circ f$ 的 $u \in \gamma$ 的集合之间存在规范的双射对应]。 * 有趣的是，格罗滕迪克在陈述了他的主要定理（上面陈述的定理 3.1）之后，做出了与Teichmüller类似的评论
+
+（[12] 第 7-10 页）：“我们将在接下来的段落中看到，配备了自同构群 γ 的解析空间 T，可以被认为是曲线亏格为 g 的 ‘模空间问题’ 的令人满意的解决方案。让我们注意到，模空间问题实际上被认为是（尽管这并没有明确说明）在模空间上定义一个复结构。 我们可以引用阿尔福斯在 1960 年的论文 [3] 中的话，他在其中写道：“[模空间]的经典问题需要一个复解析结构，而不是度量 [...] 这个问题不是一个明确的问题，并且几种表述看起来同样合理。”
+
+--------
 接“因此，我们直接反驳了流行的观点，即此类协议必然是不切实际的。”
 
 我们对 Cachin 等人提出的最先进的异步原子广播协议进行了重大的效率改进[15]，该协议要求每个节点为每个提交的事务传输 O(N^2) 位，这大大限制了其吞吐量，除非网络规模非常小。这种低效率有两个根本原因。第一个原因是各方之间的冗余工作。然而，消除冗余的天真尝试会损害公平性，并允许有针对性的审查攻击。我们发明了一种新颖的解决方案，通过使用阈值公钥加密来防止这些攻击，从而克服了这个问题。第二个原因是使用了异步公共子集（ACS）子组件的次优实例化。我们展示了如何通过结合现有但被忽视的技术来有效地实例化 ACS：使用纠删码的高效可靠广播 [18]，以及多方计算文献中从 ACS 到可靠广播的规约 [9]。
