--- a/text/长文1.md
+++ b/text/长文1.md
@@ -31,15 +31,15 @@ Riemann面的一个特别有趣的解析族是基空间B为Teichmüller空间且
 
 我们注意到，Teichmüller曲线后来在数学文献中被重新引入，通常没有引用Teichmüller的论文。对Teichmüller空间的纤维丛方法被多位作者扩展和精确化，例如参见Ahlfors的[4]、Bers的[6]、[12]和Earle与Eells的[9]。在Ahlfors的1961年论文[4]和Bers的1961年论文[6]中，这个纤维丛被用来定义Teichmüller空间的复杂结构。8
 
-当然，Teichmüller空间当时还不被认为是复域。后来发现了该空间嵌入到 $(\mathbb{C}^N)$的方法。
+7 当然，Teichmüller空间当时还不被认为是复域。后来发现了该空间嵌入到 $(\mathbb{C}^N)$的方法。
 
-Ahlfors在他的论文中（第171页）说他的方法“基本上是Bers的”，Bers写道（第356页）：“Teichmüller声称高维Teichmüller空间具有‘自然’的复杂结构；第一次证明是由Ahlfors给出的，Rauch展示了如何在任何不是双曲面的点的邻域引入复分析坐标。其他证明归功于Kodaira-Spencer和Weil。”Bers在讨论解析结构的一节开头写道：“这一节和下一节的结果证实并扩展了Teichmüller在论文《可变Riemann面》中的一些断言。它们还表明，上述定义的复分析结构是自然的，并与Rauch-Ahlfors的结构相符。”我们顺便指出，Riemann面的纤维丛的切丛序列是Kodaira-Spencer关于Riemann面微小变形理论的基础[14]，该理论也提供了Teichmüller空间复杂结构的描述。Grothendieck对Teichmüller空间的研究基于对具有Riemann面作为纤维的基面的解析纤维丛的考虑（Grothendieck将其称为“属数为g的代数曲线”），参见[12]，第7讲及以下。最后，我们注意到纤维丛方法也被用来定义解析向量丛，最自然的一个是在基空间上的每一点处取纤维面的切丛。对模量空间上纤维丛的特征类的研究导致了多项重要发展。在这方面，我们提到Mumford猜想（由Madsen解决）和Witten猜想（由Kontsevich解决）。
+8 Ahlfors在他的论文中（第171页）说他的方法“基本上是Bers的”，Bers写道（第356页）：“Teichmüller声称高维Teichmüller空间具有‘自然’的复杂结构；第一次证明是由Ahlfors给出的，Rauch展示了如何在任何不是双曲面的点的邻域引入复分析坐标。其他证明归功于Kodaira-Spencer和Weil。”Bers在讨论解析结构的一节开头写道：“这一节和下一节的结果证实并扩展了Teichmüller在论文《可变Riemann面》中的一些断言。它们还表明，上述定义的复分析结构是自然的，并与Rauch-Ahlfors的结构相符。”我们顺便指出，Riemann面的纤维丛的切丛序列是Kodaira-Spencer关于Riemann面微小变形理论的基础[14]，该理论也提供了Teichmüller空间复杂结构的描述。Grothendieck对Teichmüller空间的研究基于对具有Riemann面作为纤维的基面的解析纤维丛的考虑（Grothendieck将其称为“属数为g的代数曲线”），参见[12]，第7讲及以下。最后，我们注意到纤维丛方法也被用来定义解析向量丛，最自然的一个是在基空间上的每一点处取纤维面的切丛。对模量空间上纤维丛的特征类的研究导致了多项重要发展。在这方面，我们提到Mumford猜想（由Madsen解决）和Witten猜想（由Kontsevich解决）。
 
 9 这个术语是德语“permanente Ortsuniformisierende”的英文翻译，Bers也在[6]中使用。Teichmüller曲线证明是Hodge理论中一个极其重要的对象。
 
 Teichmüller的目标是展示Teichmüller曲线是维数为(3g - 2)的复流形。
 
-在一般情况下，当基空间B是具有Riemann面为纤维的解析流形时，Teichmüller引入了一个他称之为永久坐标的概念，这是一个局部解析坐标系统，为每个纤维上的Riemann面提供一个解析参数。因此，Teichmüller得到了一个局部适用于B上点的Riemann面族的坐标t，与B的局部r维参数结合，产生了M的（r+1）维参数系统，将其视为（r+1）维复流形。他声明这样的永久坐标存在。
+在一般情况下，当基空间B是具有Riemann面为纤维的解析流形时，Teichmüller引入了一个他称之为永久坐标的概念，这是一个局部解析坐标系统 9，为每个纤维上的Riemann面提供一个解析参数。因此，Teichmüller得到了一个局部适用于B上点的Riemann面族的坐标t，与B的局部r维参数结合，产生了M的（r+1）维参数系统，将其视为（r+1）维复流形。他声明这样的永久坐标存在。
 
 纤维上的Riemann面在先验条件下没有标记。Teichmüller表明可以从一个纤维的标记获得周围纤维的标记。他接着说，由于众所周知的原理，从空间B可以构造一个相对未分叉的覆盖B，B上的点的纤维是标记的Riemann面。
 
