--- a/text/长文1.md
+++ b/text/长文1.md
@@ -43,7 +43,7 @@ Teichmüller的目标是展示Teichmüller曲线是维数为(3g - 2)的复流形
 
 纤维上的Riemann面在先验条件下没有标记。Teichmüller表明可以从一个纤维的标记获得周围纤维的标记。他接着说，由于众所周知的原理，从空间B可以构造一个相对未分叉的覆盖B，B上的点的纤维是标记的Riemann面。
 
-Teichmüller接着陈述了一个全局解析的标记（Teichmüller称之为“拓扑确定”）Riemann面族H[c]的存在性和唯一性定理，其中c遍历一个τ维复解析流形C，对于任何亏格为 g为g的标记Riemann面H，存在且仅存在一个c，使得Riemann面H与H[c]同胚，且族H[c]满足以下普适性质：如果H[p]是以B为基的任何全局解析的Riemann面族，则存在一个holomorphic映射 $(f : B \to C)$，使得族H[p]是通过f提升的族H[c]。Teichmüller声明这样的族H[c]存在，并且在本质上是唯一的。从上下文来看，用现代术语来说，本质唯一性意味着族是等价类群作用下唯一的。
+Teichmüller接着陈述了一个全局解析的标记（Teichmüller称之为“拓扑确定”）Riemann面族H[c]的存在性和唯一性定理，其中c遍历一个τ维复解析流形C，对于任何亏格为 g的标记Riemann面H，存在且仅存在一个c，使得Riemann面H与H[c]同胚，且族H[c]满足以下普适性质：如果H[p]是以B为基的任何全局解析的Riemann面族，则存在一个holomorphic映射 $(f : B \to C)$，使得族H[p]是通过f提升的族H[c]。Teichmüller声明这样的族H[c]存在，并且在本质上是唯一的。从上下文来看，用现代术语来说，本质唯一性意味着族是等价类群作用下唯一的。
 
 复解析流形C，作为族H[c]的基空间，是我们今天称之为Teichmüller空间的对象。这个存在性和唯一性结果后来被Grothendieck重新发现，他用与Teichmüller不同的代数几何语言给出了完整的证明。Grothendieck在Cartan的研讨会上（1960-1961年）关于此主题做了一系列讲座，并将这些讲座的文字记录流传和出版。Grothendieck的陈述比Teichmüller的更一般；它用普适性质的术语表达，涉及使用Grothendieck的措辞的一个“硬化函子”P相对于离散群 $(\gamma) $，可以特别取为“Teichmüller硬化函子”，其中 $(\gamma) $是等价类群。Grothendieck的陈述是以下内容（在这个陈述中，T是Teichmüller空间）：
 
