--- a/text/长文1.md
+++ b/text/长文1.md
@@ -1,5 +1,15 @@
 接“在更详细地评论这些事实时，我们将对论文的内容给出快速回顾。”
 
+泰希米勒首先回顾了在他之前就已为人所知的一个结论，但当时仅通过启发式论证得出，即亏格为 g 的黎曼曲面等价类的复参数个数是
+
+$$
+\tau = \begin{cases}
+0, & \text{if } g = 0 \\
+1, & \text{if } g = 1 \\
+3(g-1), & \text{if } g > 1.
+\end{cases}
+$$
+
 他声明，多位作者使用了不同的方法得出这些数字，但实际上这些作者无法准确地说明他们在计数什么。他认为这些计数导致相同值的事实是一种奇迹，因为使用的方法并不严格。Teichmüller随后说，为了具有意义，这些数字应该代表一个维数，并且为了讨论集合的维数（在本例中，为模量空间），必须将该集合转化为具有邻域概念的某个“空间”。4在这里，Teichmüller是第一个以如此精确的术语表述Riemann面的模量问题的人。
 
 Teichmüller强调，不应该首先要求通过坐标系统中的数字来显式表示模量空间中的点（这种方法似乎是由Riemann的工作所暗示的），而应该更多地研究该空间的内部结构。他随后说，不仅希望模量集合R具有拓扑空间或代数多样体的结构，还希望具有解析流形的结构，即无奇点的复空间。Teichmüller说这是不可能的，因为R“包含某些奇异流形”。用现代语言来说，这对应于模量空间是一个orbifold而非流形的事实。因此，他构造了一个没有奇点的R的覆盖空间R。这个空间R后来被称为Teichmüller空间。5
