--- a/text/长文1.md
+++ b/text/长文1.md
@@ -31,7 +31,7 @@ Teichmüller同年去世，享年30岁。在这一介绍之后，Teichmüller定
 
 Teichmüller随后引入了解析n维流形的概念，由具有解析坐标变换的坐标图定义。看起来这是该定义在数学文献中的一个早期出现。我们可以引用Remmert的话（第19页，第225页）：
 
-很难确定第一篇显示复流形的文章。在1944年，它们出现在Teichmüller关于“可变Riemann面”的工作中（Collected Papers，第714页）；在这里，我们第一次遇到德语“komplex analytische Mannigfaltigkeit”的表达。英语“complex manifold”出现在Chern的工作中（第8页，第103页）；他只是顺便提到通过星座来定义。而在1947年，我们在Weil的文章[23]的标题中发现“variété analytique complexe”。复流形瞬间在各处绽放。
+似乎很难找到首次明确出现复流形的那篇论文。在1944年，它们出现在Teichmüller关于“可变Riemann面”的工作中（Collected Papers，第714页）；在这里，我们第一次遇到德语“komplex analytische Mannigfaltigkeit”的表达。英语“complex manifold”出现在Chern的工作中（第8页，第103页）；他只是顺便回顾了（通过一个流形的图集）的定义。而在1947年，我们在Weil的文章[23]的标题中发现“variété analytique complexe”。复流形的概念瞬间在各处绽放。
 
 无论如何，值得注意的是，文献中首次出现的高维复流形的例子（其他不是复数域C^n，n≥2的域的例子）正是等价类的标记复流形（维数为一）的空间。7
 
