--- a/text/长文1.md
+++ b/text/长文1.md
@@ -1,3 +1,244 @@
+
+坚持假赛论的观众如何评价 TI10 真视界？ - Paprika的回答 <br>
+https://www.zhihu.com/question/555464203/answer/2689581914
+
+Lao：
+任何一种观点都是可以的，但是假赛是没有事实依据的，你可以说他们可能吃了，但是你斩钉截铁的说他们就是吃了，那吃的哪部分菠菜？买的那个盘？你对买菠菜的了解有多少？每个盘的上限你有了解过吗？你不会觉得你赔率是1000所以你拿100万买可以得10亿吧？
+这些如果都不清楚，那你说的话几乎是不存在事实支撑的。
+所有假赛被证实的比赛，都有明显的盘位浮动，作为一个经常买比赛的，我就很清楚什么盘的赔率明显有问题，什么盘可以买。
+就这我都不认为lgd 这次是假赛，老干爹让2追3，在很多盘里都达到了1400，而雪碧赢下比赛只有1200。说明老干爹第五局之前的利益最大化是应该买自己让2追3的。
+如果想全员吃菠菜，那所有队伍应该送esports 进决赛我记得他们赔率都到了50000左右。
+老干爹被3比1的赔率是2100，被横扫则超过5000。
+你告诉我他为什么选了个赔率低的？
+雪碧晋级决赛以后，很多人都认为雪碧有可能赢，所以3比2输的赔率并不高。
+你觉得老干爹是菜的可能性大，还是有钱不赚的可能性大？你有钱不赚吗？你觉得人家犯这种病？
+按照你的逻辑，我更不相信钱摆在面前，然后不要，还得被骂
+
+Paprika > Lao 
+你既然是物理出身的，你应该很知道事实依据对论证一个事的意义，你不能说因为看上去太阳在围着地球转所以就是地心说吧？
+我们谁都不知道细节，在没有人指正，没有确切的实锤，你只能说你怀疑，那怎么能叫就是吃了呢？
+你可以拿这个方式去论证物理吗？因为没见过地球停下来，所以地球是永动机吗？
+
+Paprika > Lao 
+我说根据现有信息我相信LGD假赛，又没有把LGD送进去啊。我网上买了个咸鸭蛋尝起来却是鸡蛋，我还需要分子生物学证据再来骂无良商家吗？
+你问我地球是不是永动机的问题，要证明是永动机存在需要非凡的证据，因为永动机不存在经受了很多事实的检验，地球一直再转根本不是什么有力的证据，而且有证据证明一直在减速。dota2中包括TI有假赛是个公认的事实，LGD打假赛又不是什么很离谱的假设需要很强的证据来支撑，现有的事实已经足以让我相信了。
+
+Lao > Paprika 
+好，我问你dota2里ti假赛有的事实是哪个？
+他和老干爹有关系吗？
+一楼阳性20楼必然也阳性是吧？
+
+Lao > Paprika 
+你根据的信息都是可以解释的信息，按照你的信息，老干爹不要最多的钱，还要挨骂，意义在哪？那你说一下。
+
+Lao > Paprika 
+假赛都可能，所有比赛都可能，但是逻辑是选手为了赚钱，但是盘口看，这样赚不到钱，而且输了比赛没好处，那他为了什么？
+如果老干爹让2追3赔率低，输了赔率高，那假赛可能性更大，但是为什么不直接被横扫？被横扫拿钱最多，秘密也被横扫了，秘密赔率也比雪碧高，bp,ig赔率都高于雪碧，逻辑统一分析，那大家都在吃，老干爹被横扫也没问题吧？他们不愿意要这个钱？非要争赔率最低的吗？
+
+Lao > Paprika 
+而且假赛盘有很多种玩法，一般会玩假赛的都让你看不出来，先装鸭子，小组赛输，小组赛也是有盘口的，不停的控制赔率，先让自己爆冷输给烂队，这不能赚钱吗？说吃菠菜的真的对菠菜一点都不了解，也没买过，很多爆冷都是这么来的，然后淘汰赛在买自己，最后决赛输，或者赢看收益，这一路能吃的菠菜就多了。
+把自己打造成胜利之师最后买自己输纯傻，更何况最后吃了一个那么小的盘口，图什么？你会这样做吗？
+解释不通啊，假赛盘都演的很真，能让你看出来，那以后谁去买菠菜？
+
+Lao > Paprika 
+博彩公司更不可能和战队合作，他们是抽水的，中100万抽5万，他们最希望没有假赛，大量的人去买，他们就源源不断的钱，打广告是一个方面，合伙坑毒狗控盘除非疯了，庄家有水不抽去和自己对赌？就为了赚一锤子买卖？博彩公司赚的是量，为什么现在体育品牌都在和菠菜互相广告，就是因为在国外大家赌多了都知道大盘都会监督控盘，生怕毒狗都不来赌钱了。
+国内真正买过比赛的人太少，都是自己以为是啥样就信以为真，你真买几次你就知道盘口这玩意对不对都很明显，有的小盘就是刻意杀猪，小比赛才可能这样，大比赛作假也不会让人看出来。
+Dota2爆出来的假赛全部都是小比赛，坐等杀猪的野盘。
+
+Paprika > Lao 
+菠菜公司赚不赚一锤子买卖不是你说了算，dota2眼瞅着越来越凉为啥不能有人竭泽而渔？你又说大比赛作假不会被看出来，又说你根据盘口觉得LGD不会假赛，你不是自相矛盾吗？
+
+Lao > Paprika 
+小比赛可能，因为小比赛大盘不开，dota2什么时候越来越凉了？
+国内不能开设博彩公司，你能买的都是国外的，整个世界范围dota2人数稳定增长，观众历届都增多，怎么就越来越凉？特别欧洲。
+
+Lao > Paprika 
+小比赛可能，因为小比赛大盘不开，dota2什么时候越来越凉了？
+国内不能开设博彩公司，你能买的都是国外的，整个世界范围dota2人数稳定增长，观众历届都增多，怎么就越来越凉？特别欧洲。
+
+Lao > Paprika 
+完全不矛盾，我说比赛作假你看不出来是比赛看不出来，不是盘口，盘口和比赛是两个东西，老干爹上来就崩了，这种明显不行是大家觉得不对的原因，但是很多假赛都不是上来就崩了，看盘口肯定能看出来啊，买自己输盘口比例大到不可思议，这谁经常买都能知道，但是这次的比分和盘口都不是最大利益化的。
+
+Lao > Paprika 
+Dota2在世界范围没有越来越凉啊，千万别这么觉得，ti10前都新高了。
+欧洲现在是主力，很多菠菜都是欧洲的，因为美国境内只能在维佳斯买，或者加拿大买。
+
+Lao > Paprika 
+菠菜公司没有赚一锤子买卖的，躺着赚钱为什么要去冒风险？
+万一队伍不配合，或者其他博彩公司出更多的钱对赌，不就把自己玩死了？
+菠菜公司都是抽水，买的人多他们一天就几亿流水，他去对赌是图啥？
+就算你觉得有对赌的，小比赛我不能说死，大比赛绝对不可能，因为你的博彩公司来和我的战队对赌是不可能签协议的，这个没有法律保护，你知道吧？只能私下约定，你出5亿让我输，那其他菠菜公司也来跟我对赌，出6亿让我赢，并告诉我已经花了3亿让对面输了，请问这样的话怎么办？菠菜公司的风险得不到保障，最后必然有一个被玩弄，更何况选手都不是美国的，你跑回中国菠菜公司怎么追杀你？
+人家没必要这样玩，就抽水，3到5百分比就可以一天赚几亿了，去玩风险，不是糊涂吗？
+
+Lao > Paprika 
+物理出身，你肯定智商很高，我这么说你应该能理解我的意思，我不是纠正你说一定没有假赛，肯定有假赛的情况，但是这一场不像，因为盘口利益不对，我经常买有点经验，早年被小盘杀猪过，做这个人熟悉了就会告诉我们大概什么情况。
+你可以不信，我也不会在多说，但是这一场的情况就是这样，说白了，老干爹有没有可能假赛，可能性总有，但不能斩钉截铁说他就是，也没有证据。
+现在菠菜都3.0玩法了，入股体育公司，他们现在全面监督市场发展营销这一块，尽可能让更多人来买，抽水量巨大，一般俱乐部大盘根本看不上，世界杯都不可能去控盘，能把菠菜做大的公司都是牛人，他们本身就很有钱，主要是用菠菜来直接做体育，而不是对赌了，那都是小盘玩法，他们现在是培养一个项目，制造观赏性，然后世界化，拉拢最大的转播公司，在比赛里直接显示赔率，事实勾引别人来买，这个盈利多大，怎么会去对赌。
+Ufc 就是这么起来的，直接在比赛显示赔率，他们股东就是菠菜大佬家庭出身的，要不干这么大，但是ufc 基本不可能假赛，假赛不符合他们的利益。
+
+Paprika > Lao  
+我真的不想聊菠菜到底怎么挣钱的问题，LGD战队的老板本身就是菠菜公司，有什么不配合的问题？抽水能挣钱不假，控制比赛挣得更多更快啊。从菠菜的角度根本不能排除假赛。
+
+Paprika > Lao 
+你一直从菠菜公司的视角分析，菠菜公司从来都想宣传比赛公平公正啊，不然谁来玩？从菠菜的视角出发根本得不出什么有效结论。
+
+Lao > Paprika 
+那你非要这么觉得，我也没办法，但是这次盘口就不太像，你可以保留你的观点，我也没有证据就说他不是，但是不像，你的几条都被删除了，可能是骂我的，我也就不回复了，你也辛苦了，就这样，我尊重物理科普答主，谢谢了。
+
+Lao > Paprika 
+不是的，我所有角度都说了，一开始是战队角度，但是可能你没看。
+
+Lao > Paprika 
+你觉得这些信息没用就算了，无所谓了。
+
+Paprika > Lao 
+我没骂过你，可能是提到不合法的东西自动删除了，我也同样的话送给你，你非要觉得不是假赛我也没办法，我也没有非要信使假赛，本身都是主观的判断。
+
+Lao > Paprika
+行，没骂过算我谢谢你了，我以为讨论非zz 话题不会有禁烟。
+
+Paprika > Lao 
+我也不是非要说服你信假赛论，但你至少觉得有一些可能。我觉得，如果一个人真的认为一丝丝假赛的可能性都没有，肯定不正常。
+
+Lao > Paprika 
+不，假赛是肯定可能的，假赛甚至都有没吃到的可能，就像我说的想让2追3结果输了，这个可能的。
+但是如果不考虑这个方向，从赔率上说，老干爹故意吃低赔率挨骂，我认为不合理，这不对。
+
+以下是其他用户的评论，未按对话格式改写：
+
+狼与吸血鬼 > Lao 
+说到证据，还有个词叫举证责任倒置。
+LGD或者TI适不适用这种情形，我觉得也不是没有讨论余地的，毕竟当初NB假赛实锤也是很大程度靠他们自爆的。
+如果适用举证责任倒置的情形，那么做有罪推定也是正当的。
+
+江随云 > Paprika 
+我感觉你书都读到狗肚子里去了。
+
+hust100 > 所有人 
+一叶障目，不见泰山，你分析的这些鸟用没用，不正常操作的背后都是以利益为导向，至于什么利益你看的清么，不要只盯着奖金和盘口。[调皮]
+
+知乎用户VNYCRO > 所有人 
+如果你提供的数据是正确的，雪碧胜1200，LGD让二追三1400，那么我更加相信LGD在TO10打了假赛。下面8在第一二局和三四五局的表现，完全是两个样子，第二局结束看见看到翻盘1400就想名利双收。[大笑]
+
+Lao > hust100  
+就是，你连盯着啥都不知道，还喜欢比比别人。
+
+Lao > 知乎用户VNYCRO  
+有这个可能。
+
+hust100 > Lao  
+我就喜欢看你这自以为是卵用没有的分析[调皮]。
+
+司马越苦海 > Paprika 
+于是说了一年了，还是没有石锤。
+
+hust100 > 知乎用户VNYCRO 
+他这数据你都信，全世界的盘口和投注量他连毛都没看到。
+
+刘豪鸣 > Paprika 
+世界上dota在线人数一直在上涨，怎么就越来越凉？现在就是Dota最火的时候！
+国内的撸🐶可以继续去舔资本的屁股，在腾讯伸不到手的国外dota2仍然会越来越火！
+
+Paprika > 司马越苦海 
+管网友要实锤可真有你的，网友有权力查LGD和各位选手的帐吗？
+
+蟒蛇火车 > 所有人 
+你能懂菠菜公司的逻辑跟幕后的操作，盈利的方式，最终的获利，你也不会在这里打字了。
+另外你觉得和他觉得本来就是不矛盾的，你要他觉得才会有分歧，毕竟你也没证据说明不是假赛，假赛要有证据，真赛一样要有。
+
+金尘0603 > 刘豪鸣 
+好狗子。
+
+Paprika > 刘豪鸣 
+你随便骂，我不在乎，你骂出花来我也认为LGD假赛了。
+
+北落师门 > 所有人 
+兄弟，有一句话不知当讲不当讲，人们只愿意相信自己想相信的东西，而不管事实本身啊[酷]。
+
+尴尬了 > Paprika 
+高度盖然性即是根据事物发展的高度概率进行判断的一种认识方法，是人们在对事物的认识达不到逻辑必然性条件时不得不采用的一种认识手段。高度盖然性的证明标准由最高人民法院公布的《关于民事诉讼证据的若干规定》给出定义。
+
+楚昊云升 > Paprika 
+dota2越来越凉实属整笑了，你不会还在国内吧。
+
+goestodie > 所有人 
+你眼光这么牛逼还在知乎上跟我们吹啥水啊，直接杠杆拉满不就完了吗。这东西就是我说假赛你说没证据；你说真的我录像看鼠标看切视角我是真没法认同。那双方各退一步，你玩你的，我从此以后不提我打了6年dota。明年我王者就比dota时间多了，以后就是王者玩家了。
+
+听话的泡泡 > Lao 
+加拿大减10分。
+
+Madao > Lao 
+他是屁股问题，你跟他扯物理思维有啥用啊，都放弃思考了。
+
+Lao > goestodie 
+你玩啥跟我有关系吗？
+
+Lao > goestodie 
+你这意思就是所有有本事的人不用社交软件是吧？那特朗普还在推特跟人吹水呢，你怎么不说了？
+
+Paprika > 楚昊云升 
+TI奖金池一定越来越高了吧。
+
+红烧冰淇淋 > Paprika
+眼瞅着越来越凉，指在线人数越来越多。
+
+司马越苦海 > 所有人
+人家为什么要有石锤呢？你给人家发工资去找石锤吗？有人提问有人回答，发表意见而已，网友又不靠挖石锤吃饭，难道没有石锤就不让说了？
+
+冰仔 > Paprika
+因为有体彩，所以足球都是假赛，包括世界杯，英超 欧冠 这就是你的逻辑。
+
+金烨 > Paprika
+现在的洗地哥都这么疯狂了吗？
+
+金烨 > Lao
+兄弟你想没想过 如果买lgd的太多了，资本不想搞这个抽水的钱了呢？[思考] 正常人决赛前有会买雪碧的吗？
+
+Lao > 金烨
+你说这个话，顺明你没买过。
+
+Lao > 金烨
+不少人买弱队，没人买，请问赢家赚的是谁的？
+
+Lao > 金烨
+100个人赌，100个人都买老干爹，那这100个人赢了不就赔了，还扣手续费。
+
+装鬼 > 所有人
+有的人只愿意相信自己做相信的东西，就是不愿意承认技不如人。
+
+金烨 > Lao
+是你这个意思啊 如果像你这么极端的假设 lgd敢赢 骨灰都给他扬了。
+
+李飞 > Lao
+兄弟，别聊了，这帮人就是热衷宏大叙事，粉丝化的那帮人。看dota2相关消息不如上sgamer论坛。里面全是编ame段子的，看的可舒服了。
+
+知乎用户iDtPAa > Paprika
+真的没必要和这些人对线，纯属浪费时间。lgd的拙劣表演有多离谱看过比赛的人都知道，这些人你说啥他们都视而不见。
+
+知乎用户iDtPAa > Lao
+笑死我了，还事实，有事实的话早就把lgd锤爆了。答主说他自己的合理怀疑有啥问题。
+
+Lao > 知乎用户iDtPAa
+你更笑死我了，我说他怀疑有问题了？
+
+知乎用户iDtPAa > Lao
+追着喊着跟人对线几十条，破大防了吧，都质疑上别人的物理学优秀答主身份了。哎。。。。。。
+
+Lao > 知乎用户iDtPAa
+原来在知乎上说点东西就是破防啊。
+
+Lao > 知乎用户iDtPAa
+我质疑别人物理优秀答主身份了？笑死了，我和答主都没吵起来你在这咧咧啥呢？
+我哪一句话质疑了？
+
+加速世界 > 所有人
+我觉得一个人溜大了，因为他亢奋异常手舞足蹈胡言乱语，你非要问我他溜的货从哪个贩子手里提的纯度是多少化学分子式是什么，说不出来就证明那人没溜，这逻辑真是幽默不完了[飙泪笑]。
+
+Lao > 加速世界
+你觉得，你凭什么觉得？你怎么知道这个人不是得了疾病？如果你觉得就是客观事实，我舅舅是省级医院的神经科大夫，要不让他邀请你去他的资源主持会诊，你用你觉得来判断一下病人的情况，可否？
+
+
+-------
 接“在更详细地评论这些事实时，我们将对论文的内容给出快速回顾。”
 
 泰希米勒首先回顾了在他之前就已为人所知的一个结论，但当时仅通过启发式论证得出，即亏格为 g 的黎曼曲面等价类的复参数个数是
