--- a/text/长文1.md
+++ b/text/长文1.md
@@ -14,7 +14,7 @@ Lao：
 你觉得老干爹是菜的可能性大，还是有钱不赚的可能性大？你有钱不赚吗？你觉得人家犯这种病？
 按照你的逻辑，我更不相信钱摆在面前，然后不要，还得被骂
 
-Paprika > Lao 
+Lao > Paprika 
 你既然是物理出身的，你应该很知道事实依据对论证一个事的意义，你不能说因为看上去太阳在围着地球转所以就是地心说吧？
 我们谁都不知道细节，在没有人指正，没有确切的实锤，你只能说你怀疑，那怎么能叫就是吃了呢？
 你可以拿这个方式去论证物理吗？因为没见过地球停下来，所以地球是永动机吗？
