--- a/text/长文1.md
+++ b/text/长文1.md
@@ -1,3 +1,167 @@
+接“关于危险时刻的使用、持续的相互作用，以及精神和勇气在其赋予方向上的实际运动，尚未有所讨论。”
+
+在攻城战中，才首次出现较多关于“作战指挥”本身
+
+攻城战的技术首次让“真正的作战指挥”略有了些许展露——让人瞥见“某种精神活动”正在使用这些物质手段；但大多仍是以新兴的物质工程形态呈现，如行进、掘壕、反制壕沟、炮台等等，每前进一步就会“物化成”那样一个新形态。整座攻城战几乎只要将这些物质之“新产物”串接起来就足以描述作战过程。因为在这类战争形态中，指挥心智主要是借此类工程学实物说话，所以对“攻城”本身的研究基本到此为止，已算满足需要。
+
+后来战术也有一些扩展
+
+此后，战术尝试在其“编组”中加入一些更广泛的关注，力图把军队组合设计成一种“总的配置方案”——它确实也会把部队带上战场，但依然尚未发展出真正的“自由心智活动”；在这里，经过各种作战队形和严谨作战序列改造过的军队几乎成了一个“机械自动装置”，只要头领用“口令”一催动，便会像钟表机关那样完成动员。
+
+真正的“指挥作战”仅是零星且隐匿地出现
+
+至于那“真正的指挥作战”，也就是针对战况不断变化、极其贴合个别化需求的“自主运用已准备好的手段”，则一直被认为“不可能成为理论对象”，只能听任人格天赋发挥。随着战争由中世纪那种拳脚式斗殴向更有规则、环节更复杂的形态转变，关于这种自由指挥的研究，还是偶尔以片断形式出现在一些回忆录或轶事里，并常常以“偶然”或“隐蔽”的方式呈现出来。
+
+从对战争事件的研究中，引出了对一门理论的需求
+
+当人们逐渐深入地探讨各种战事，且史书的撰写愈发具有批判性时，大家就强烈感受到，需要某种“原则”或“规律”来作为讨论的依托，好让人们于军事史中再自然不过的诸多争议之中，能有最终的评判点。因为若是既没有可信赖的核心要素，也看不出任何明显的运作规律，那么排山倒海般的各种意见混战，势必会给人留下厌烦、无从归纳的印象。
+
+努力建立一门“积极的学说”
+
+因此，开始有人着手为指挥作战提出原则、规则，甚至完整的体系。他们这样做，无形中给自己确立了一个积极的目标，却没有充分意识到：在战场上要做出灵活的指挥，其难度有多大。正如我们曾指出，指挥作战常常向各个方向延伸，边界模糊不清；而任何体系或教条，总带有一种“合成”性质的局限性，所以一旦用这种理论套用到瞬息万变的实际作战中，就注定会与实践发生难以弥合的冲突。
+
+单从物质要素着眼
+
+许多理论作者不久便感受到这一难度，仿佛认为他们有理由通过一种方式绕开它——将他们的规则或体系仅限于物质层面和单边行动。他们想像在战备理论中那样，仅研究确定、可定量的成果，因此就只考量能进行数值运算的因素。
+
+兵力优势
+
+比如，“兵力上的优势”就被视作一种可度量的物质因素：在时间及空间的组合下，仿佛可以为其套入某种数理法则。对于其他所有影响，他们想当然地认为可予以“抽象化处理”：想象两边状况无差别从而等量抵消。倘若只是暂时这么做，以便更清晰地认识这个单一因素本身，他们似乎有道理；可一旦将其当作恒定法则，把“在一定时间与地点上集中优势兵力”视作战争艺术的全部奥秘，就难免过分狭隘而与真实生活格格不入了。
+
+军队给养
+
+还有另一种物质元素——军队给养——也曾被系统化处理过。有人把“军队的补给”建立在一种既定的编制体系基础上，并将其奉为大规模战争活动的主要决策依据。殊不知那套方法很快就走向从各类假设中硬推一些特定数值，而这些数值往往因其前提条件过于武断，在现实检验中根本站不住脚。
+
+“基地”概念
+
+别有一位颇具机智的人试图将众多影响因素（其中甚至包含部分“精神联系”）统一到“基地”这一概念下：包括军队的补给、兵源补充、装备保障、与本土的联系安全，以及在必要时的安全后撤。其中再将基地的“规模（广度）”加以量化，并且把军队与基地的夹角大小也一并推入公式，企望得出一个纯几何化的结论。可这些几何结果毫无实用价值；这是可想而知的，因为任何一步“替代”都要牺牲事实的准确性，舍弃了在“原本概念”中还蕴含的重要要素。
+“基地”本身确是战略上真实所需之物，发明这个概念是值得肯定的成就；但像上述那般运用它，势必走向片面结论，甚至会把那位理论家引入颇为荒谬的偏差——主张采取“过度包围形态”的兵力部署将占压倒性优势。
+
+“内线”原则
+
+作为反动，对上述错误方向，另一种几何化原则（即所谓“内线”原则）被倡为金科玉律。尽管这个原则的正确之处在于肯定：会战才是战争中唯一真正起作用的手段；可它本身只基于几何特征，难免带有新的片面性，也绝不足以在实践中真正掌控复杂的战局。
+
+这些尝试都值得批评
+
+所有这类理论尝试，在其分析部分也许能对某些真理作出贡献，但一旦要上升到演绎规则乃至下“指示”，皆无实战意义。
+它们致力于追求确定数值，但战争中一切要素都充满了不确定性，一切演算都必须面对持变动的参量。
+它们把注意力仅放在外部物质因素上，却忽视整个战争行为都受“精神力量与影响”贯穿。
+它们只是着眼于单方面的活动，而战争事实上是一种你来我往的持续交互过程。
+
+否定天才的地位
+
+它们凡是不能被这些简单分析涵盖的内容，就统统归于“天才领域”——那天才似乎可凌驾于所有规则之上。
+但倘若有谁只能在这贫乏的规则间爬行，而同时又受到“天才才配无视规则并讥讽它”的说法影响，这份规则的卑微可见一斑！天才行为正代表了“最精妙绝伦”的规则，而理论工作若能阐明其为何如此、何以如此，亦是莫大之功。
+任何与天才精神对立的理论，纵然再恭顺谦卑，也终将被嘲讽与轻蔑放逐于真实生命之外。
+
+最初，“战争艺术”只被当作对军队的准备
+
+早先，人们往往把“战争艺术”或“战争科学”当作一系列与“物质层面”相关的知识和技能——比如如何配置与使用武器、修筑堡垒和壕沟、军队组织的机制以及军队行动的机械化方式等等，这些都旨在提供战争中“可资使用的武力”。
+在这个领域中，我们关心的是涉及物质材料，以及它们所带来的单向操作，其本质上只是随着时代演变、从手工业水准提升到复杂的机械技能而已。它与实战时那种“身临险境、彼此时时交互、考验意志与智慧的对抗”，并无直接联系，恰似铁匠磨炼剑身与战士运用剑术之间毫无交集。
+
+从“攻城术”开始，才稍涉“指挥作战”
+
+在攻城战术中，人们首度看到了对真实交战的部分考量，以及对指挥思维的关注，不过这种思维的体现大多仍附着在新的物质设施之上，如壕沟推进、反壕沟操作、炮台建造等等，可谓每走一步就伴随一次物质“产出”。在此形态领先时，以此大体就能反映整座攻城战的指挥过程；因为对这类战争形态而言，指挥心智几乎全部借由物质手段表现出来，这样就已经足够了。
+
+而后，战术在此框架中持续推进
+
+之后，战术试图在军队的编制机理中进一步植入“面向整体”即“针对武器器材特性的布署思路”。它的确能把成形的军队推进到战场，但依旧未能产生真正的精神自如运用；在这模式中，被严整队形和战列组织改造过的部队，好比一个依赖外部口令启动的“钟表装置”，只是在“指令”之下机械地完成行动。
+
+“真正的战争指挥”仅零星显露，并带有“隐性”特质
+
+人们曾认为那种真正根据瞬时时局、个别需求来自主运用各种军事准备的自由指挥，并不存在可供建构系统的理论领域，只能仰赖个人天赋。随着战争由中世纪的单纯近身搏斗演化为更有秩序、更庞大的结构，人们对这种“真正指挥”也偶尔提出片断见解，但常常只是散见于回忆录或战史轶事里，且仅以“随口提及、隐晦示意”的方式出现。
+
+当战争相关的思考一旦涉及到精神层面的因素，理论的难度就会骤然提升
+
+只要理论所探讨的范畴进入“精神要素”这一领域，其难度就会陡增。对于建筑学与绘画而言，不论其所处理的材料如何，局限在物质层面时，都较为确切；在机械或光学的建构问题上也不会存在争端。但只要进入其作品对人心形成精神影响或触发情感层面的部分，所有所谓“规则”就变得模糊难定。
+医术大多也只与人体的生理现象打交道，接触到的是不断变化的动物机体，这本身就使难度相当大，并且使医生的判断有时比其所掌握的知识更加重要。然而，一旦再加入一种精神效果，其难度无疑会更高，因而“疏理心灵”的医者被人看得更为尊崇。
+
+在战争中，绝不能将精神要素排除在外
+
+然而，作战行动从来不是单纯对“物质”发起的，而是始终也指向使之“活跃”的精神力量；两者绝不可割裂。精神层面的东西只有凭借“内心之眼”才能观察，而这双眼在每个人身上都不尽相同，甚至每个人在不同时间点也未必相同。又由于“危险”是战争活动赖以进行的共同环境，也就格外凸显“勇气”，或者说对自身实力的自信，这种精神要素会深刻影响判断。它有点像“会聚镜片”，所有感知都要先经其折射才到达理性。尽管如此，我们仍无法质疑：经验会赋予这些影响某种客观意义。
+所有人都知道，如若能出其不意地攻击或对敌后侧展开攻势，会在精神上产生巨大影响；只要看到敌人开始后退，一般就会低估其勇气，追击时的胆量也与被追击时截然不同。人人都会因对对手才能水平、年龄及阅历的看法而适度调整策略；也都要审视自己军队以及对方将士的士气。这些类似的精神作用，早已在实践里得到验证，不断重复出现，因此我们有把握将其视作“真实存在的要素”。若一门理论对这些影响漠然不顾，那还能成什么模样？
+当然，这些道理都必须在经验里得到印证；要让某种理论考量停留在玄妙的心理学或哲学推演上，对实际指挥官而言并无任何裨益。
+
+指挥作战理论的主要难点
+
+若要完整理解在“指挥作战”这门理论上所面临的难度，并由此推断出它可能会具备的特质，我们必须仔细审视“战争活动天生的几大特点”。
+
+第一大特点：精神力量及其影响（敌意情绪）
+
+首先的特点是：精神方面的力量与其效应。
+最原初的“战斗”，本就是敌对情绪的外在表现。然而在我们所说的大规模战争中，这种“敌对情绪”常常只剩下“敌对意图”，至少对个体而言未必怀恨对方个人。即便如此，实际战争中依旧少不了某种情感的投入。民族仇视——即便在我们现代战争里也很少缺席——常常将“总体敌意”转化为更直观的个人对立。即使在最初并无强烈敌对感情，人们在真正奋战时也会被“暴力冲突”本身所挑动，进而激发“复仇报复”的情绪，早于对其上级命令者的敌意。这是人性——或者也可说是兽性——但事实就是这样。
+理论界常常习惯将交战视为一种纯粹“力量对比”的抽象过程，好像丝毫不涉感情；可这是理论家们有意犯下的众多谬误之一，因为他们不愿面对真实带来的种种后果。敌意本身所带来的心灵激发以外，还有其他与之并非本质相属、但因相近而容易相互结合的因素，例如野心、权力欲、各种形式的热忱等等。
+
+危险带给人的印象（勇气）
+
+最后，战斗还催生出“危险”这一环境；就像鸟在空中、鱼在水中一样，所有军事行动都须在危险之中维系并展开。而“危险”这一要素会通过本能或经由理性交织的方式对心理产生影响。若是本能地反应，便会想要逃避；当无法逃避时，恐惧与畏缩便随之而来。若不出现此种反应，则是“勇气”在与那本能相抗衡。但勇气绝非理性所施行的某种举动，而同样是一种情感，正如恐惧那样；区别在于恐惧指向对身体生存的顾虑，勇气则面向“道德存在”——可把它视为更高贵的一种本能。也因此，勇气并不像死板工具能遵照固定尺度产生某种“正好恰当”的效用。它并非仅仅用来抵消危险效应从而产生一种中和，而自有它的“固有价值”。
+
+危险影响范围之广
+
+要真正认识到危险对从事战争的人会产生多大影响，绝不应只把它局限于实际时刻的身体威胁；它不仅影响亲身遭遇危险的人，也会波及他所肩负的所有部队；不仅是在危险确实当前的那一刻，也包括在一切与此时刻相关联的其他时段，通过想象让人时时感到威胁存在。此外，还会借由“责任感”在心理上施加几十倍的压力——会有谁在建议或决定进行重大战役时，不会因其可能关乎生死存亡与责任巨大而内心紧张不安？可以说，凡是在战争里真正“有所行动”者，都不会完全脱离危险的笼罩。
+
+其他心理力量
+
+如果我们把因“敌对”与“危险”所激发的情感当作战争所特有的要素，那么其他以往在日常生活中伴随人类的种种情绪依旧不会在此全部消失，反而可能在战争中继续发挥作用。虽说对于一些低阶层的作战人员来说，各种零碎的私心杂念可能被此等极端使命所镇住，使他们在一次又一次的危险和艰辛中干脆无暇顾及其他人生琐事；他们也因不再弄虚作假，而渐渐形成“士兵式的纯朴天性”，这是军人形象中最可贵的一面。
+但对于高阶层的指挥者而言则属另一情况：地位越高，越要顾及方方面面的利益，所以就会出现形形色色的情感、并交织着善与恶的要素。有人会嫉妒，也有人高风亮节；有人骄傲自大，也有人谦卑收敛；会爆发激愤，也会生出感动…所有这些都可能在这场宏大的战争戏剧中成为现实动力。
+
+心灵的独特性
+
+除了上述因“敌意情感”而生的一系列心灵活动外，行动者个体本身还带着多种个性化的思想特征，对结果影响也极大。显然，天马行空、过度浪漫而稚嫩的思维方式，与冷静务实、头脑坚毅者的作战方式会截然不同。
+38
+
+从精神个体多样性所带来的，是通往目标路径的多样性
+
+这种“精神个体性”的高度多样性——在高层指挥岗位上其影响尤其显著，因为位置越高，精神要素的主导性越强——正是我们先前在第一卷中所说“通往目标的多样途径”得以诞生的主要原因，也因此在作战进程中，“概率与侥幸”会占有相当不同的比重。
+
+第二个特点：鲜活的“反作用”
+
+指挥作战的第二大特点在于它具备“鲜活的反作用”以及由此导致的交互影响。这里我们先不谈“计算这类反作用之难度”，因为这正是前面所述“将精神力量视作可度量因素”的困难之一；我们要强调：交互本身便天然地排斥某种“按图索骥”的僵化计划。任何指令对对手所产生的效应，常是各种行动中最具“个别性”的部分；可“理论”却只能就外在事象进行类型化归纳，它无法囊括“每个实际个案”。这种具体情形的处理只能由现场判断与个人才干来实现。于是，那些基于常规环境作出的宏观安排，往往会被意料不到的个别状况打乱，因此这类做法在实战中更多需要依赖人才的灵变，而非机械地套用理论指导。
+
+第三个特点：所有信息的“不确定性”
+
+最后，大量“不确定”是战争中最显著的困难：几乎一切决策都在“混沌的微光”中进行，甚至常如雾霭或月光般的朦胧，使事物看上去夸大而怪异。在这“昏暗灯光”下所缺失的准确洞见，只能靠才智去猜测，或者交由运气决定。所以在缺乏客观之明的情况下，终归又得依赖“个人天赋”甚至“幸运女神”。
+
+无法确立一门“积极学说”
+
+就作战活动这种本性而言，想用“正面建构的理论体系”来为兵法提供一整套“标准架构”，几乎是做不到的。实际挥兵者在任何涉及个人才干的情景中，都会置身于你的理论之外，甚至与之背道而驰。不管此体系多么周全，仍旧难免出现我们曾提及的那个结局：天赋与才华不遵循既定“条文”，而理论却与真实发生对立。
+
+可行性的两条出路（难度不均衡）
+
+然而，面对这些困难，我们仍能寻到两条可行之道。
+
+首先，战争总体具有这样的复杂程度，但并不意味着各层级、各职能中都如出一辙。在较低层面，个体须承担更多“英勇献身”的职责，可其判断与思维上所面临的难题却少得多：事态边界较为简单，目标与手段的数量更有限，很多信息甚至可直接观察获取。但往上每进一步，困难便陡增；到了居最高领导之位时，难度达到巅峰，几乎一切皆得拜托于其个性天赋。
+
+其次，依战事性质的不同，困难程度也并非处处相同：若作战效应偏在物质范畴中显现，理论就更易着手；若转换到精神领域而成为“决定意志”的因素，则牵涉动机与心态时就更难驾驭。譬如要用理论来规定“整场会战内部的秩序、部署和构造”，这是比较可行的，因为主要是武器实体之间的直接对抗，虽无可避免地包含精神因素，但物质方面仍占主要地位。可一旦转向如何应用这些会战手段，并将“物质成果”转化为影响对方心智的动机，就几乎荆棘遍地了。换句话说：战术的理论难度要比战略小得多。
+
+理论应当是一种思考方式，而非“简明课本”
+
+另一条使理论可行的思路是：它不必非得扮演一门“正面教科书”，即一套“行动指令模式”。
+
+一切那些大体上反复面对同样事物、同样目标与手段、即便其间有些细微变化，或在组合方式上再多样化，也总还能成为可被理性思考的对象。这样的思考便是任何理论所不可或缺的核心部分，才真正配得上“理论”之名。它是一种对研究对象的分析性探究，让我们能与之十分熟悉；若它再结合经验（具体在此则是战争史）的运用，还会培养我们对该对象的深度亲近。它越好地达成这一目标，就越会从“客观的知识形态”转化为一种“主观的技能形态”；如此一来，即使在那种仅能由个人天赋裁决、无法认定其他模式的场合里，它依旧会产生影响——因为它会在那人的内心发挥作用。
+
+如果理论能细心剖析构成战争的种种事物，更明晰地区分那些表面看来相混合的内容，全面列举这些手段的特性，指出它们可能引发的效果，并且清楚阐明战争意图的性质——并在每一处都投射出耐心而批判的目光，那么它就已完成其主要任务。对任何想通过阅读来把握战争的人而言，这样的理论可谓一本优秀的向导；它能在各处照亮道路，使脚步更从容，锻炼一个人的判断力，并避免走入歧途。
+
+假如一个熟稔此道、具备专业素养的人，用半生时间投入到某个晦暗领域的探究之中，他在这方面自然要比那些短时间内只想浅尝辄止的人走得更远。因此，让后者不必重复那些艰辛的探索、而是能承袭现存的系统与脉络，这正是理论存在的价值所在。它的使命在于引导或辅助将来作战指挥者的“自我训练”，而非陪同他直奔战场；正如一位睿智的导师会为青年理清心智发展方向、加以鼓励，却不会因此就一辈子牵着他走。
+
+如果在理论的研究中，相关思考自然地孕育出某些原则或规则——真理于此自然而然地凝结为“晶体”——那么理论也不会抵触这种人类心智的“自然定律”；相反，在它们像拱顶锁石那样完成时，还会稍加强调。但之所以如此，主要是为了顺应哲学思维之法则，使得所有线索汇聚的那一点更加显明，并不想将这些原则或规则变成适用于战场的代数公式；因而，这些规则对于思考者本身而言，更多只是帮助他在大脑中“建构主要脉络”，而非像“丈量标杆”那样在执行中对线路进行逐段标示。
+
+用这样的视角，也就能建立一门让人满意的、有益且不与现实冲突的战争理论；它只需依赖合宜的运用方法，即可与实务运作相辅相成，不再会出现那种人们常批评的、理论与实践相抗之情形——那通常是由荒谬的理论造成的；尽管不乏另一面，“缺乏深度”与“无知”也常把它当借口，仗着“先天决断力不足”而纵容自己不走正道。
+
+因此，理论要阐述“目标”和“手段”之间的关系。
+在战术层面，手段即为承担作战任务的“已成型军事力量”，而目标便是取得胜利。胜利的含义如何进一步界定？那要在随后讨论“会战”时再详谈。此处仅表示：迫使对方退出战场即可视作胜利。通过这场胜利，战略上才得以实现其赋予会战的目标，也就是为“胜利”赋予真意义。这个意义也某种程度上会影响“胜利”的性质——若胜利主要在削弱敌军实力，与只是为了据守某处阵地，自然有别；从而也可能对如何部署与指挥作战带来显著影响。因而这些“意图”也应该由战术理论加以考虑。
+
+那些始终相伴左右、并对作战应用发生或多或少影响的条件
+作战过程中有一些持续存在的客观条件，如地形（或“地势”）、时间（具体到昼夜）以及天气，这些都可能影响使用军事力量时的考量。
+
+地形
+若在完全平坦无遮蔽的原野中对决，地形影 响可忽略，然而对现代欧洲这类“文明国度”来说，几乎不存在纯平无建设物的地带，所以基本上无一作战能彻底免受地势影响。
+时间
+时间的差异主要显现在“白天与黑夜”之别，但作战常跨时长较久，往往可达数小时乃至更久，因此在筹划大型会战时，从清晨开战或下午开战就会是重要区别。不过也有不少战斗不会受此影响——总的看，这一因素通常作用有限。
+天气
+至于天气，能真正左右战势的情况更罕见，除非是浓雾之类影响巨大者，否则大多时候不至于产生决定性作用。
+
+----------
 接“为了求解集合约束系统，执行以下操作：”
 
 1. 每个约束变量 x 都有一个与其关联的解集 Sol(x)。
