--- a/text/长文1.md
+++ b/text/长文1.md
@@ -1,3 +1,86 @@
+接“新的南非出资聘请古巴医生帮助重建我们支离破碎的医疗卫生系统，并允许卢旺达学生以当地费用就读其大学。”
+
+在数百名受益于南非慷慨资助的学生中，有些是失去双亲的幸存者；有些是叛徒的孩子；还有许多人两者都不是。他们中的大多数人后来都在我们国家的不同领域成为了领导者。今天，他们过着一种全新的生活。
+
+关于种族灭绝的本质，以及生命的价值，我们吸取了什么教训？
+
+我想分享一个通常深藏于心的个人故事。
+
+我的表妹，实际上就像我的亲姐妹一样，弗洛伦斯，在联合国开发计划署驻卢旺达办事处工作了超过15年。种族灭绝开始后，她被困在位于基加利军营附近的家中，与她的侄女、其他孩子和邻居们在一起，总共有十几个人左右。
+
+弗洛伦斯家里的电话还能用，我用卫星电话给她打了好几次电话。每次通话她都更加绝望，但我们的部队无法到达那个地区。当联合国维和部队指挥官达莱尔将军在我所在的穆林迪拜访我时，我请求他营救弗洛伦斯。他说他会尽力。
+
+最后一次我和她通话时，我问她是否有人来过。她说没有，然后开始哭泣。接着她说，“保罗，你不应该再尝试救我们了。反正我们也不想活了。”我很快明白了她的意思。然后她挂断了电话。那时，我有一颗非常坚强的心。但它变得有点脆弱，因为我明白了她想告诉我什么。
+
+5月16日早上，在遭受一个月的折磨后，除了一个侄女以外，他们全部遇害，那个侄女得益于一位好邻居的帮助才得以逃脱。
+
+后来得知，一名在联合国开发计划署工作的卢旺达人将他的图西族同事出卖给了凶手。证人记得他在袭击当晚庆祝弗洛伦斯的遇害。甚至在他被牵连的证据出现后，他仍然在联合国继续他的职业生涯多年。他仍然是一个自由人，现在住在法国。
+
+我问达莱尔将军发生了什么事。他说他的士兵在房子附近遇到一个民兵路障，然后他们就原路返回了，就这么简单。与此同时，他向我转达了美国大使的命令，即保护乘坐公路撤离到布隆迪的使节和外国平民免受民兵袭击。这两件事是同时发生的。我不需要被指示去做一件不言而喻的事情。那是我本来就要做的。但是维和人员却逃离了那些看守路障的民兵。我不责怪达莱尔将军。他是一位好人，在难以想象的最糟糕的条件下尽了最大努力，并且尽管付出了个人代价，但他始终如一地见证着真相。
+
+然而，在这两种情况的对比中，我注意到不同生命所被赋予的价值是不同的。
+
+在1994年，所有图西族人原本应该被彻底消灭，因为在此之前的几十年里，迫使我和数十万人流亡的杀戮还不够彻底。这就是为什么即使是婴儿也会被系统地杀害，这样他们就不会长大成为战士。
+
+卢旺达人永远无法理解，为什么任何国家都会故意含糊其辞，不说明种族灭绝中的目标人群是谁。我不明白这一点。这种模棱两可实际上是一种否认，它本身就是一种犯罪，卢旺达将永远挑战它。
+
+1994年7月，在外部支持者的帮助下，种族灭绝的势力逃往扎伊尔（现称刚果民主共和国），他们发誓要重组并返回以完成种族灭绝。在接下来的五年里，他们对卢旺达境内发动了数百次跨境恐怖袭击，不仅针对幸存者，还针对拒绝流亡的其他卢旺达人，造成数千人丧生。
+
+这些势力的残余今天仍然在刚果东部，在那里他们得到国家的支持，就在联合国维和部队的眼皮底下。他们的目标没有改变，今天被称为FDLR的这个组织之所以没有被解散，唯一的理由是他们的继续存在服务于某些不言而喻的利益。
+
+因此，数十万刚果图西族难民生活在我们的国家卢旺达和更远的地方，完全被遗忘，没有任何安全返回的行动计划。我们真的吸取了任何教训吗？
+
+我们看到太多的行动者，甚至包括一些来自非洲的行动者，直接参与其中，部落政治被赋予新的神圣地位，种族清洗正在酝酿和实施。我们怎么了？这就是我们想要生活的非洲吗？这就是我们想要的世界吗？
+
+卢旺达的悲剧是一个警告。如果不加以控制，导致种族灭绝的分裂和极端主义进程可能发生在任何地方。
+
+纵观历史，大规模暴行的幸存者总是被期望保持沉默，自我审查，否则就会被抹杀，甚至被指责是他们自身不幸的根源。他们的证词是共谋行为的活生生的证据，它扰乱了那些安慰教唆者和旁观者的虚构故事。
+
+卢旺达越是充分承担起自身安全和尊严的责任，关于种族灭绝的既定真相就越是受到质疑和修正。随着时间的推移，在由世界上有权势者控制的媒体中，受害者被重新塑造成恶棍，甚至这一刻的纪念活动也被嘲笑为一种纯粹的政治策略。
+
+事实并非如此。过去从未如此。我们对这种虚伪的反应是纯粹的厌恶。我们纪念，因为那些生命对我们来说很重要。
+
+卢旺达人不能对种族灭绝的根源漠不关心。我们将始终给予最大的关注，即使我们是孤身一人。但我们所寻求的是团结和伙伴关系，以便作为一个全球社会共同认识和应对这些威胁。
+
+我再给你们讲一个故事。
+
+在种族灭绝的后期，有一天晚上，过了午夜，我意外地接到了达莱尔将军的来访。他带来了一份书面信息，我现在还保留着它的副本，那是来自法国将军的，他指挥着法国刚刚部署在我们国家西部地区的“绿松石行动”部队。
+
+信息说，如果我们这些卢旺达爱国阵线（RPF）的部队胆敢试图占领我们国家南部的布塔雷镇，我们将付出沉重的代价。达莱尔将军给了我额外的建议，实际上是在警告我。他说法国人有武装直升机和各种各样的武器，你能想象到的各种重型武器，因此他们准备在我们不遵守的情况下对我们使用这些武器。
+
+我问达莱尔，法国士兵的血是否和我们的一样；我们的身体里是否流着血。然后我感谢了他，并告诉他，在告知法国人我们的回应之后，他应该去休息和睡觉。
+
+而回应确实来了。
+
+我立即用无线电通知了我们在那个地区的部队指挥官，他叫弗雷德·伊宾吉拉，告诉他准备行动。准备战斗。我们拿下了布塔雷，这个我们被警告不要进入的地方，我们在黎明时分拿下了那个城镇。
+
+几周之内，整个国家都被控制住了，我们开始了重建。我们没有那些被用来威胁我们的武器，但我提醒了一些人，这是我们的土地，这是我们的国家。流血的人将在这片土地上流血。我们已经失去了所有的恐惧。每一次挑战或侮辱都只会让我们变得更强大。
+
+种族灭绝之后，我们面临着如何防止它再次发生的难题。根据我们的经验，我们学到了三个主要教训。
+
+首先，只有我们卢旺达人和非洲人才能充分认识到我们生命的价值。毕竟，我们不能要求别人比我们自己更珍视非洲人的生命。这是我们有责任保留记忆并讲述我们所经历的历史的根源。
+
+其次，永远不要等待救援或请求许可去做正确的事情来保护人民。这就是为什么有些人用各种各样的事情来威胁我们时，他们一定是在开玩笑，他们不知道自己在说什么。但无论如何，这就是为什么今天卢旺达自豪地参与维和行动，并在被要求时向非洲兄弟姐妹提供双边援助的原因。
+
+第三，坚决反对任何形式的种族民粹主义政治。种族灭绝是纯粹形式的民粹主义。因为其原因是政治性的，所以解决办法也必须是政治性的。因此，我们的政治不是基于种族或宗教来组织的，而且永远不会是。
+
+我这一代人的生命一直是一个反复出现的种族灭绝暴力的循环，从1960年代初到1994年，每隔30年一次，直到今天2024年我们在我们地区看到的迹象。只有新一代的年轻人有能力在种族灭绝后重建和救赎一个国家。我们的工作是为他们提供空间和工具，让他们打破这个循环。
+
+而他们已经做到了。
+
+给我们希望和信心的是我们早些时候在表演中看到的那些孩子们，或者是创造了“铭记之旅”传统的年轻人，这一活动将在今天晚些时候举行。今天，近四分之三的卢旺达人年龄在35岁以下。他们要么对种族灭绝没有任何记忆，要么还没有出生。我们的年轻人是我们未来的守护者，是我们团结的基础，他们的思想观念与上一代人完全不同。
+
+今天，所有卢旺达人都战胜了恐惧。没有什么比我们已经经历过的更糟糕了。这是一个由1400万人组成的国家，他们已经准备好面对任何试图让我们倒退的企图。
+
+卢旺达的故事表明了人类内心蕴藏着多么强大的力量。无论你拥有什么力量，你最好用它来讲述真相，做正确的事情。在种族灭绝期间，人们有时可以选择花钱换取不那么痛苦的死亡方式。当时我了解到另一个故事，它始终萦绕在我的脑海中，关于一个女人在路障前，在她生命的最后时刻的故事。
+
+她给我们留下了一个非洲人应该遵循的教训。
+
+当杀手问她想怎么死时，她看着他们的眼睛，朝他们的脸上吐了口水。今天，由于侥幸生存，我们唯一的选择是我们想要过什么样的生活。我们的人民永远不会，我是说永远不会，再被遗弃等死了。
+
+谢谢大家。
+
+--------
 接“关于危险时刻的使用、持续的相互作用，以及精神和勇气在其赋予方向上的实际运动，尚未有所讨论。”
 
 在攻城战中，才首次出现较多关于“作战指挥”本身
